--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,3 +35,168 @@ html {
 
 /* navbar */
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.abcd {
+    width: 100px;
+    height: 100px;
+    animation-duration: 3s;  
+    top: 300px;left:700px;
+    position: relative;
+    border-radius: 50%;
+    border-bottom: 10px solid green;
+    border-right: 1px solid#FF3366;
+    border-left: 1px solid red;
+    border-top: 10px solid #FF3366;
+    animation:example1 linear 1s infinite;
+}
+
+
+
+@keyframes example1 {
+from {
+    transform:rotate(0)
+    }
+to {
+    transform:rotate(-360deg);
+    }
+}
+
+
+/* nav */
+
+.navbar {
+    display: flex;
+    height: 100px;
+    line-height:100px;
+    justify-content: space-between;
+    align-items: center;
+  
+}
+
+.navbar-block {
+    display: flex;
+    height: 46px;
+    line-height:46px;
+    align-items: center;
+}
+
+.navbar-logo {
+    height: 35px;
+    width:162px;
+    background-image: url("../img/logo/logo.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin:0px 30px 0px 0px;
+}
+
+.navbar-content__header {
+    display:flex;
+    list-style: none;
+}
+
+.navbar-content__header>li {
+    margin:0px 13px;
+
+}
+.navbar-content__header>li:first-child {
+    margin-left:10px;
+}
+
+.navbar-content__header {
+    font-size:16px;
+}
+
+.navbar-content__header__icon {
+    font-size:9px;
+    margin-left:5px;
+    
+}
+
+.navbar-control__subscribe {
+    width: 132px;
+    height: 44px;
+    background-color:var(--primary-color);
+    border:none;
+    border-radius:3px;
+    color:#fff;
+    font-size: 16px;
+    
+}
+
+.navbar-control__search {
+    width: 44px;
+    height: 44px;
+    line-height: 46px;
+    border:none;
+    border-radius:3px;
+    margin-left: 10px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.navbar-control__subscribe:hover,
+.navbar-control__search:hover {
+    background-color:var(--hover-color);
+    color:#fff;
+}
+
+.navbar-control__search_icon {
+    position: relative;
+    margin-top: 2px;
+    top:5%;
+}
+
+/* post */
+.post {
+    width: 100%;
+}
+
+
+
+.post__content{
+    height:28px;
+    line-height:28px;
+    border:solid 1px #ccc;
+    border-radius:28px;
+    padding: 6px 20px;
+}
+
+.post__content__point {
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background-color: #ccc ;
+    display:inline-flex;
+    margin-right:10px;
+    padding-top:10px;
+    position: relative;
+    top:2px;
+}
+
+.post__title {
+    font-size:18px;
+    margin-top: 10px;
+   
+
+}
+
+.post__datetime {
+    font-size: 12px;
+}
+
+.post__datetime_time__point{
+    border-radius: 6px;
+    width: 6px;
+    height: 6px;
+    border: 1px solid #909090;
+    top: -1px;
+    display: inline-block;
+    margin-left: 7px;
+    margin-right: 7px;
+}
+
