--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,8 @@
 html {
     font-family: 'Rubik', sans-serif;
 }
+
+
 .heading {
     display: flex;
     justify-content: space-between;
@@ -122,7 +124,7 @@ to {
     height: 44px;
     background-color:var(--primary-color);
     border:none;
-    border-radius:3px;
+    border-radius:5px;
     color:#fff;
     font-size: 16px;
     
@@ -134,7 +136,7 @@ to {
     line-height: 46px;
     border:none;
     border-radius:3px;
-    margin-left: 10px;
+    margin-left: 6px;
     font-size: 16px;
     cursor: pointer;
 }
@@ -154,21 +156,56 @@ to {
 /* post */
 .post {
     width: 100%;
+    display: flex;
 }
 
 
+.post .post__title {
+    font-family: 'Nunito', sans-serif;
+}
+
+.post__list {
+    padding: 15px;
+}
+
+.post--bublbe .post__content__point {
+    background-color:#994db1;
+
+}
+
+.post--skyblue .post__content__point {
+    background-color:  #2568ef;
+
+}
+
+.post--blue .post__content__point {
+    background-color: #0d30c3;
+
+}
+
+.post--pink .post__content__point {
+    background-color:  #c74970;
+
+}
+
+.post--orange .post__content__point {
+    background-color:#ed7e4f;
+
+}
 
 .post__content{
     height:28px;
     line-height:28px;
     border:solid 1px #ccc;
     border-radius:28px;
-    padding: 6px 20px;
+    padding: 4px 12px;
+    font-size: 14px;
+    margin:0px 10px 10px 0px;
 }
 
 .post__content__point {
-    width: 16px;
-    height: 16px;
+    width: 12px;
+    height: 12px;
     border-radius: 50%;
     background-color: #ccc ;
     display:inline-flex;
@@ -180,13 +217,13 @@ to {
 
 .post__title {
     font-size:18px;
-    margin-top: 10px;
+    margin: 10px 0px;
    
-
 }
 
 .post__datetime {
-    font-size: 12px;
+    font-size: 10px;
+    color:#444;
 }
 
 .post__datetime_time__point{
@@ -199,4 +236,51 @@ to {
     margin-left: 7px;
     margin-right: 7px;
 }
+
+
+/* new */
+.news__picture {
+    background-image: url('../img/news/ofhlstldxzk-1140x694.jpg');
+    min-height: 460px;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#news {
+    color:#fff;
+}
+
+.post__description--white,
+.post__datetime_time--white,
+.post__datetime_date--white {
+    color:white;
+}
+
+.post__content--whitte {
+    background-color: #fff;
+    color: #000;
+}
+
+.news__item {
+    position: relative;
+}
+
+
+.news__title {
+    padding: 30px;
+    position: absolute;
+    bottom:30px;
+
+}
+
+.news__modal {
+    background-color: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    top:0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
+
+
 
