--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,4 +5,16 @@
 
 .nunito {
     font-family: 'Nunito', sans-serif;
+    font-weight: 800;
+}
+
+@media(max-width:1024px){
+    .navbar-content {
+        display: none;
+    }
+}
+
+.nunito4 {
+    font-family: 'Nunito', sans-serif;
+    font-weight: 400;
 }
