--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,9 @@ html {
     font-family: 'Rubik', sans-serif;
 }
 
+.container {
+    margin-bottom: 40px;
+}
 
 .heading {
     display: flex;
@@ -258,6 +261,7 @@ to {
     min-height: 460px;
     background-size: cover;
     background-repeat: no-repeat;
+    border-radius: 8px;
 }
 
 #news {
@@ -302,11 +306,12 @@ to {
     left: 0;
     bottom: 0;
     margin-right:45px;
+    border-radius: 8px;
 }
 
 .news__list__title {
     padding-bottom: 15px;
-    margin :  0px 10px 0px;
+    margin :  0px ;
 }
 
 
@@ -390,7 +395,7 @@ to {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 40px 0px;
+    margin: 30px 0px;
 }
 
 .technology__load__iem {
@@ -428,8 +433,7 @@ to {
     padding: 0px 15px;
 }
 
-#art .post__datetime,
-#art .post__content {
+#art .post__datetime{
     margin: 0px 15px;
     border-radius: 5px;
 }
@@ -444,4 +448,94 @@ to {
 
 #art .news__picture--2 {
     background-image: url("../img/art/2.jpg");
+}
+
+/* selected */
+
+#slected .slected__card__img {
+    background-image: url("../img/card/1.jpg");
+
+}
+
+.slected__card__img {
+    background-repeat: no-repeat;
+    min-height: 568px;
+    border-radius: 8px;
+    background-size: cover;
+    background-position: 0px;
+}
+
+#slected .technology__card__img{
+    max-height: 132px !important;
+    height: 132px;
+}
+
+.technology__card__img__select {
+    background-repeat: no-repeat;
+    min-height: 132px;
+    border-radius: 8px;
+    background-size: cover;
+    background-position: 0px;
+}
+
+#slected .technology__card__img--2{
+    max-height: 132px;
+}
+
+#slected .technology__card__content {
+    margin-top: 10px;
+}
+
+#slected .technology__card {
+    margin: 0;
+}
+
+#slected .technology__card:first-child {
+    margin-top: 40px;
+}
+
+#travel .news__picture{
+}
+
+#travel .news__picture--1{
+    background-image: url("../img/travel/1.jpg");
+}
+
+#travel .news__picture--2{
+    background-image: url("../img/travel/2.jpg");
+}
+
+#travel .news__picture--3{
+    background-image: url("../img/travel/3.jpg");
+}
+
+#travel .news__picture--4{
+    background-image: url("../img/travel/4.jpg");
+}
+
+#travel .news__picture--5{
+    background-image: url("../img/travel/5.jpg");
+}
+
+#travel .news__picture--6{
+    background-image: url("../img/travel/6.jpg");
+}
+
+#travel .news__item {
+    padding: 20px;
+}
+
+#travel .news__modal {
+    margin: 20px;
+
+}
+#travel .news__picture {
+    min-height: 400px;
+}
+
+#travel .post__title {
+    font-size: 24px;
+} 
+#travel .post__list {
+    margin: 0px 10px -15px;
 }
