--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -124,11 +124,12 @@ to {
     display: inline-block;
 }
 
+.item-nav__content {
+}
+
 .nav-sub__demo {
     position: absolute;
     list-style: none;
-    background-color: #ccc;
-    padding: 0px 30px;
     z-index: 11;
     justify-content: center;
     display: flex;
@@ -136,11 +137,64 @@ to {
     align-items: center;
     left:-20px;
     border-radius: 5px;
+    background-color: white;
+    box-shadow: #999 1px 1px 5px 1px;
+}
+
+/* seccond */
+
+.nav-sub__second {
+    position: absolute;
+    left:100%;
+    background-color:white;
+    min-width: 200px;
+    list-style: none;
+    box-shadow: #999 1px 1px 5px 1px;
+    border-radius: 5px;
+    padding: 0px 15px;
+    display: none;
 }
 
 .nav-sub__demo__item {
-    display: inline;
-    min-width: 200px;
+    min-width: 250px;
+    justify-content: space-between;
+    line-height: 30px;
+    display: none;
+    padding: 0px 25px;
+    transition: all 2s;
+
+}
+
+.nav-sub:hover .nav-sub__demo__item  {
+    display: flex;
+}
+
+.nav-sub__demo__item:hover  .nav-sub__second{
+    display: block;
+    opacity: 1;
+}
+
+.nav-sub:hover .nav-sub__item,.nav-sub:hover .navbar-content__header__icon{
+    color:#2568ef;
+}
+
+
+.nav-sub__second___item:hover {
+    color:#2568ef;
+    cursor: pointer;
+
+
+
+}
+
+.nav-sub__demo__item:hover .item-nav__content {
+    color:#2568ef;
+    cursor: pointer;
+}
+
+.item-nav___icon {
+    font-size: 10px;
+    padding-top: 10px;
 }
 
 .navbar {
@@ -225,10 +279,44 @@ to {
     top:5%;
 }
 /* slider */
+#sliderundercata {
+    background-color: #13181c;
+    padding: 100px 0px; 
+}
+
+#sliderundercata .post__title, #sliderundercata .news__list__title, #sliderundercata .technology__week {
+    color: #fff;
+}
+
+#sliderundercata .technology__card__img {
+    min-height: 343px;
+}
+
+#sliderundercata .technology__card__img--1 {
+    background-image: url("../img/undercata/1.jpg");
+}
+
+#sliderundercata .technology__card__img--2 {
+    background-image: url("../img/undercata/2.jpg");
+}
+
+#sliderundercata .technology__card__img--3 {
+    background-image: url("../img/undercata/3.jpg");
+}
+
+#sliderundercata .technology__week  {
+    margin:0px 0px 50px 0px;
+}
+
 
 .owl-carousel, .owl-carousel .owl-item {
     margin-top: -25px;
 }
+
+.owl-carousel, .owl-carousel .owl-item {
+    margin-top: -25px;
+}
+
 
 #slider {
     margin-bottom: 60px;
@@ -393,7 +481,7 @@ to {
 
 /* new */
 .news__picture {
-    background-image: url("../img/news/ofhlstldxzk-1140x694.jpg");
+    background-image: url("../img/trend/1.jpg");
     min-height: 460px;
     background-size: cover;
     background-repeat: no-repeat;
